--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -3,7 +3,7 @@
   margin-right: 18px;
   font-weight: 400;
   font-size: 24px;
-  line-height: 28px;
+  line-height: 117%;
 }
 
 .header__link:last-of-type {
@@ -14,6 +14,6 @@
 @media screen and (max-width: 320px) {
   .header__link {
     font-size: 18px;
-    line-height: 20px;
+    line-height: 111%;
   }
 }
