--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -22,6 +22,12 @@
   }
 }
 
+@media screen and (max-width: 650px) {
+  .cover__title {
+    font-size: calc(100vw / 10);
+  }
+}
+
 @media screen and (max-width: 320px) {
   .cover__title {
     font-size: 32px;
