--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -14,15 +14,20 @@
   opacity: 0.5;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 650px) {
   .footer__link {
     margin-left: 0;
     margin-bottom: 32px;
-    font-size: 24px;
-    line-height: 100%;
   }
 
   .footer__link:last-of-type {
     margin-bottom: 48px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .footer__link {
+    font-size: 24px;
+    line-height: 100%;
   }
 }
