--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -5,12 +5,20 @@
   line-height: 120%;
   text-align: center;
   color: #FFFFFF;
+  width: 60%;
+}
+
+@media screen and (max-width: 768px) {
+  .lead__subtitle {
+    width: 70%;
+  }
 }
 
 @media screen and (max-width: 320px) {
   .lead__subtitle {
-    margin: 16px 0 0;
+    margin: 16px auto 0;
     font-size: 16px;
     line-height: 125%;
+    width: 80%;
   }
 }
