--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -8,6 +8,12 @@
   color: #FFFFFF;
 }
 
+@media screen and (max-width: 768px) {
+  .lead__title {
+    font-size: calc(100vw / 8);
+  }
+}
+
 @media screen and (max-width: 320px) {
   .lead__title {
     font-size: 40px;
