--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,6 +1,5 @@
 .place__image {
   width: 460px;
-  height: 460px;
   grid-column: 1;
   grid-row: 3;
 }
@@ -8,21 +7,18 @@
 @media screen and (max-width: 1024px) {
   .place__image {
     width: 440px;
-    height: 440px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .place__image {
     width: 340px;
-    height: 340px;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 650px) {
   .place__image {
-    width: 320px;
-    height: 320px;
+    width: 100%;
     margin-top: 32px;
   }
 }
