--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,18 +1,18 @@
 .footer {
   display: flex;
-  margin: 92px 48px 24px;
+  margin: 92px 48px 0;
   justify-content: space-between;
 }
 
 @media screen and (max-width: 768px) {
   .footer {
-    margin: 88px 24px 24px;
+    margin: 88px 24px 0;
   }
 }
 
 @media screen and (max-width: 650px) {
   .footer {
-    margin: 64px 16px 24px;
+    margin: 64px 16px 0;
     flex-direction: column;
   }
 }
