--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,13 +1,9 @@
 .header__link {
   color: #FFFFFF;
-  margin-right: 18px;
+  margin: 0;
   font-weight: 400;
   font-size: 24px;
   line-height: 117%;
-}
-
-.header__link:last-of-type {
-  margin-right: 0;
   text-decoration: none;
 }
 
